fix: adjust navbar alignment

--- a/src/components/nav/navbar/Navbar.module.scss
+++ b/src/components/nav/navbar/Navbar.module.scss
@@ -21,6 +21,7 @@ $header-height: 80px;
 
     .mobileContainer {
       display: flex;
+      align-items: center;
       gap: 10px;
     }
 
